# osrs

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.json
osrslib/: __init__.py  osrs.py
