[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "osrs_utils"
version = "0.1.0"
description = "Funciones útiles para programar en OSRS"
authors = [{name = "Cristobal Wiechert"}]
requires-python = ">=3.10"
dependencies = [
    "mss",
    "numpy",
    "opencv-python",
    "PyAutoGUI",
    "pynput",
]

[tool.setuptools.packages.find]
where = ["."]
